[tool.poetry]
name = "repl_python3_Khagbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
google-api-python-client = "^2.6.0"
flask = "^2.0.1"
replit = "^3.1.0"
pytube = "^10.8.4"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
